<resources>
    <string name="app_name">ShirazU </string>
    <string name="todo">TODO</string>
    <string name="news">News</string>
    <string name="announcement">Announcement</string>
    <string name="email">Email</string>


    <string name="enter_email_title">Username or Email Address</string>
    <string name="enter_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password_button">forgot your password?</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="draft">Drafts</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="contacts">Contacts</string>
    <string name="Calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="journal">Journal</string>
    <string name="notes">Notes</string>
    <string name="mail_header">Mailboxes</string>
    <string name="compose">Compose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_email_show">EmailShow</string>
    <string name="title_activity_email_navigation">EmailNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
