<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="All labels">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_inbox"
                android:icon="@drawable/inbox"
                android:title="inbox" />
        </group>
        <item android:title="All labels" >
            <group android:title="All labels">

                <item
                    android:id="@+id/nav_draft"
                    android:icon="@drawable/drafts"
                    android:title="@string/draft" />
                <item
                    android:id="@+id/nav_sent"
                    android:icon="@drawable/sent"
                    android:title="@string/sent" />
                <item
                    android:id="@+id/nav_trash"
                    android:icon="@drawable/trash"
                    android:title="@string/trash" />
                <item
                    android:id="@+id/nav_spam"
                    android:icon="@drawable/spam"
                    android:title="@string/spam" />
            </group>
        </item>
    </item>



    <item android:title="google apps">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/contacts"
                android:title="@string/contacts" />
            <item
                android:id="@+id/nav_calender"
                android:icon="@drawable/calendar"
                android:title="@string/Calendar" />
            <item
                android:id="@+id/nav_task"
                android:icon="@drawable/tasks"
                android:title="@string/tasks" />
            <item
                android:id="@+id/nav_jornal"
                android:icon="@drawable/journal"
                android:title="@string/journal" />
            <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/notes"
                android:title="@string/notes" />
        </menu>
    </item>

</menu>
