<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradinetbackground"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_alignParentRight="true"
        android:text="@string/news" />

    <Button
        android:id="@+id/announcement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_background"
        android:text="@string/announcement" />

    <Button
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/announcement"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_background"
        android:text="@string/email" />
</RelativeLayout>